--- a/cfd2D/cfd2D.vcxproj
+++ b/cfd2D/cfd2D.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\FluidCube.h" />
+    <ClInclude Include="src\Functions.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
