--- a/cfd2D/cfd2D.vcxproj.filters
+++ b/cfd2D/cfd2D.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="src\FluidCube.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
